--- a/templates/home.html
+++ b/templates/home.html
@@ -32,7 +32,7 @@
 
     <nav class="navbar navbar-default">
         <div class="navbar-header">
-            <p class="navbar-brand1 navbar-brand navBarTitle">Cat Feeder</p>
+            <p class="navbar-brand1 navbar-brand navBarTitle">Pet Feeder</p>
             <img class="img-responsive" src="/static/images/titleIcon.png" width="75" height="75" >
         </div>
     </nav>
