--- a/templates/admin.html
+++ b/templates/admin.html
@@ -10,9 +10,9 @@
     <meta name="author" content="">
 
     {% if localOrRemote == 'local' %}
-    <title>Admin Feeder Internal</title>
+    <title>Admin Feeder</title>
     {% else %}
-    <title>Admin Feeder External</title>
+    <title>Admin Feeder</title>
     {% endif %}
 
     <link rel="icon" href="/static/images/titleIcon.png">
