--- a/templates/video.html
+++ b/templates/video.html
@@ -10,9 +10,9 @@
     <meta name="author" content="">
 
     {% if localOrRemote == 'local' %}
-    <title>Cat Feeder Internal</title>
+    <title>Pet Feeder</title>
     {% else %}
-    <title>Cat Feeder External</title>
+    <title>Pet Feeder</title>
     {% endif %}
 
     <link rel="icon" href="../static/images/titleIcon.png">
