--- a/templates/login.html
+++ b/templates/login.html
@@ -1,21 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends "layout.html" %}
 
-  <title>Admin Feeder</title>
+{% block head %}
+{{ super() }}
+{% endblock %}
 
-  <link href="static/css/bootstrap.min.css" rel="stylesheet">
-  <link href="static/css/loginPage.css" rel="stylesheet">
-
-</head>
-<body>
-
-<div class="container">
-
+{% block main %}
   <form class="form-signin" role="form" name="login" action="/login" method="post">
     <h2 class="form-signin-heading">Please sign in</h2>
 
@@ -27,8 +16,4 @@
     <br>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
   </form>
-
-</div>
-
-</body>
-</html>
+{% endblock %}
