--- a/templates/error.html
+++ b/templates/error.html
@@ -1,51 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "layout.html" %}
 
-<head>
+{% block head %}
+{{ super() }}
+{% endblock %}
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Error</title>
-    <link rel="icon" href="/static/images/titleIcon.JPG">
-
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/css/stylish-portfolio.css" rel="stylesheet">
-    <link href="static/css/googleFonts.css" rel="stylesheet" type="text/css">
-    <script src="static/js/html5shiv.js"></script>
-    <script src="static/js/respond.min.js"></script>
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-</head>
-
-<body>
-
-<div class="container">
-
+{% block main %}
     <h1 class="page-header">ERROR</h1>
     <br>
-
     <h3>{{resultsSET}}</h3>
-
     <br>
     <button class="btn btn-primary btn-lg" onclick="goBack()">&laquo; Go Back</button>
     <script>
         function goBack() {
             window.history.back();
         }
-
     </script>
-
-</div>
-
-</body>
-
-</html>
-
-
+{% endblock %}
 
 
 
