--- a/templates/home.html
+++ b/templates/home.html
@@ -1,212 +1,158 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "layout.html" %}
 
-<head>
+{% block head %}
+{{ super() }}
+{% endblock %}
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    {% if localOrRemote == 'local' %}
-    <title>Pet Feeder</title>
-    {% else %}
-    <title>Pet Feeder</title>
-    {% endif %}
-
-    <link rel="icon" href="/static/images/titleIcon.png">
-
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/css/googleFonts.css" rel="stylesheet" type="text/css">
-    <link href="static/css/tableStyle.css" rel="stylesheet">
-    <link href="static/css/feedButton.css" rel="stylesheet">
-    <link href="static/css/camButton.css" rel="stylesheet">
-    <link href="static/css/navBar.css" rel="stylesheet">
-</head>
-
-<body>
-
-<div class="container">
+{% block main %}
 
 
-    <nav class="navbar navbar-default">
-        <div class="navbar-header">
-            <p class="navbar-brand1 navbar-brand navBarTitle">Pet Feeder</p>
-            <img class="img-responsive" src="/static/images/titleIcon.png" width="75" height="75" >
+<div class="row">
+    {% if cameraStatus == '1' %}
+        <div class="col-md-6 text-center">
+            <form role="form" name="feedbuttonclick" method="post" action="/feedbuttonclick">
+                <button class="btn btn-lg feedButton" type="submit">Feed Now</button>
+            </form>
         </div>
-    </nav>
 
-    <div>
-        {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-        {% for category, message in messages %}
-        {% if category == 'warning' %}
-        <div class="alert alert-warning">
-            {% elif category == 'error' %}
-            <div class="alert alert-danger">
-                {% else %}
-                <div class="alert alert-success">
-                    {% endif %}
-                    {{ message }}
-                </div>
-                {% endfor %}
-                {% endif %}
-                {% endwith %}
-            </div>
-
-            <div class="row">
-                {% if cameraStatus == '1' %}
-                <div class="col-md-6 text-center">
-                    <form role="form" name="feedbuttonclick" method="post" action="/feedbuttonclick">
-                        <button class="btn btn-lg feedButton" type="submit">Feed Now</button>
-                    </form>
-                </div>
-
-                <div class="col-md-6 text-center">
-                    <br>
-                    <form role="form" action="{{cameraSiteAddress}}">
-                        <button class="btn btn-lg camButton" type="submit">Live Video</button>
-                    </form>
-                </div>
-                {% else %}
-                <div class="col-md-12 text-center">
-                    <form role="form" name="feedbuttonclick" method="post" action="/feedbuttonclick">
-                        <button class="btn btn-lg feedButton" type="submit">Feed Now</button>
-                    </form>
-                </div>
-                {% endif %}
-            </div>
-
+        <div class="col-md-6 text-center">
             <br>
+            <form role="form" action="{{cameraSiteAddress}}">
+                <button class="btn btn-lg camButton" type="submit">Live Video</button>
+            </form>
+        </div>
+    {% else %}
+        <div class="col-md-12 text-center">
+            <form role="form" name="feedbuttonclick" method="post" action="/feedbuttonclick">
+                <button class="btn btn-lg feedButton" type="submit">Feed Now</button>
+            </form>
+        </div>
+    {% endif %}
+</div>
 
-            <div class="row">
-                <div class="col-md-6">
-                    <table class="FeedTable table">
+<br>
+
+<div class="row">
+    <div class="col-md-6">
+        <table class="FeedTable table">
+            <thead>
+            <th>Latest Feed Times</th>
+            <th>Feed Source</th>
+            </thead>
+            <tbody>
+            {% for entry in latestXNumberFeedTimes %}
+            <tr>
+                <td>{{entry[0]}}</td>
+                <td>{{entry[1]}}</td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+
+        {% if cameraStatus == '1' %}
+            <div>
+                <form name="myForm" method="post">
+                    <table class="table" id="upcomingFeedTimesTable">
                         <thead>
-                        <th>Latest Feed Times</th>
-                        <th>Feed Source</th>
+                        <tr>
+                            <th>Scheduled Times</th>
+                            <th>Delete Time</th>
+                        </tr>
                         </thead>
                         <tbody>
-                        {% for entry in latestXNumberFeedTimes %}
+                        {% for entry in upcomingXNumberFeedTimes %}
                         <tr>
                             <td>{{entry[0]}}</td>
-                            <td>{{entry[1]}}</td>
+                            <td class="text-center">
+                                <input class="btn-sm btn-danger" type="button" value="Delete" onclick="deleteRow(this)"/>
+                            </td>
                         </tr>
                         {% endfor %}
                         </tbody>
                     </table>
-
-                    {% if cameraStatus == '1' %}
-                    <div>
-                        <form name="myForm" method="post">
-                            <table class="table" id="upcomingFeedTimesTable">
-                                <thead>
-                                <tr>
-                                    <th>Scheduled Times</th>
-                                    <th>Delete Time</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                {% for entry in upcomingXNumberFeedTimes %}
-                                <tr>
-                                    <td>{{entry[0]}}</td>
-                                    <td class="text-center">
-                                        <input class="btn-sm btn-danger" type="button" value="Delete" onclick="deleteRow(this)"/>
-                                    </td>
-                                </tr>
-                                {% endfor %}
-                                </tbody>
-                            </table>
-                        </form>
-                        <div>
-                            <h4>Schedule a Feed Time</h4>
-                            <form role="form" name="scheduleDatetime" method="post" action="/scheduleDatetime">
-                                <input type="date" name="scheduleDatetime">
-                                <input type="time" name="scheduleTime">
-                                <input class="btn btn-primary" type="submit" value="Schedule">
-                            </form>
-                            <br>
-                            <br>
-                        </div>
-                    </div>
-                    {% else %}
-
-                    {% endif %}
+                </form>
+                <div>
+                    <h4>Schedule a Feed Time</h4>
+                    <form role="form" name="scheduleDatetime" method="post" action="/scheduleDatetime">
+                        <input type="date" name="scheduleDatetime">
+                        <input type="time" name="scheduleTime">
+                        <input class="btn btn-primary" type="submit" value="Schedule">
+                    </form>
+                    <br>
+                    <br>
                 </div>
+            </div>
+        {% else %}
+
+        {% endif %}
+    </div>
 
 
 
-                <div class="col-md-6" >
-                    {% if cameraStatus == '1' %}
-                    <table class="FeedTable table">
+    <div class="col-md-6" >
+        {% if cameraStatus == '1' %}
+            <table class="FeedTable table">
+                <thead>
+                <th>Latest Videos</th>
+                <th>Size</th>
+                </thead>
+                <tbody>
+                {% for entry in latestXVideoFeedTimes %}
+                <tr>
+                    <td><a href="{{ url_for('video_page', videoid=entry[1] ) }}">{{entry[0]}}</a></td>
+                    <td>{{entry[2]}} MB</td>
+                </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+            <div>
+                <form name="myForm" method="post">
+                    <table class="table" id="upcomingFeedTimesTable">
                         <thead>
-                        <th>Latest Videos</th>
-                        <th>Size</th>
+                        <tr>
+                            <th>Scheduled Times</th>
+                            <th>Delete Time</th>
+                        </tr>
                         </thead>
                         <tbody>
-                        {% for entry in latestXVideoFeedTimes %}
+                        {% for entry in upcomingXNumberFeedTimes %}
                         <tr>
-                            <td><a href="{{ url_for('video_page', videoid=entry[1] ) }}">{{entry[0]}}</a></td>
-                            <td>{{entry[2]}} MB</td>
+                            <td>{{entry[0]}}</td>
+                            <td class="text-center">
+                                <input class="btn-sm btn-danger" type="button" value="Delete" onclick="deleteRow(this)"/>
+                            </td>
                         </tr>
                         {% endfor %}
                         </tbody>
                     </table>
-                    {% else %}
-                    <div>
-                        <form name="myForm" method="post">
-                            <table class="table" id="upcomingFeedTimesTable">
-                                <thead>
-                                <tr>
-                                    <th>Scheduled Times</th>
-                                    <th>Delete Time</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                {% for entry in upcomingXNumberFeedTimes %}
-                                <tr>
-                                    <td>{{entry[0]}}</td>
-                                    <td class="text-center">
-                                        <input class="btn-sm btn-danger" type="button" value="Delete" onclick="deleteRow(this)"/>
-                                    </td>
-                                </tr>
-                                {% endfor %}
-                                </tbody>
-                            </table>
-                        </form>
-                        <div>
-                            <h4>Schedule a Feed Time</h4>
-                            <form role="form" name="scheduleDatetime" method="post" action="/scheduleDatetime">
-                                <input type="date" name="scheduleDatetime">
-                                <input type="time" name="scheduleTime">
-                                <input class="btn btn-primary" type="submit" value="Schedule">
-                            </form>
-                            <br>
-                            <br>
-                        </div>
-                    </div>
-                    {% endif %}
+                </form>
+                <div>
+                    <h4>Schedule a Feed Time</h4>
+                    <form role="form" name="scheduleDatetime" method="post" action="/scheduleDatetime">
+                        <input type="date" name="scheduleDatetime">
+                        <input type="time" name="scheduleTime">
+                        <input class="btn btn-primary" type="submit" value="Schedule">
+                    </form>
+                    <br>
+                    <br>
                 </div>
-
-
             </div>
-        </div>
-
-        <script>
-        function deleteRow(btn){
-            var table=document.getElementById('upcomingFeedTimesTable');
-            var i=btn.parentNode.parentNode.rowIndex;
-            var cellVal=table.rows[i].cells[0].innerHTML;
-            document.myForm.action = "{{url_for('deleteRow',history='cellVal')}}".replace('cellVal',cellVal)
-            document.myForm.submit();
-        }
-        </script>
+        {% endif %}
+    </div>
 
 
-
-</body>
-
+</div>
 
 
-</html>
+<script>
+    function deleteRow(btn){
+        var table=document.getElementById('upcomingFeedTimesTable');
+        var i=btn.parentNode.parentNode.rowIndex;
+        var cellVal=table.rows[i].cells[0].innerHTML;
+        document.myForm.action = "{{url_for('deleteRow',history='cellVal')}}".replace('cellVal',cellVal)
+        document.myForm.submit();
+    }
+</script>
+
+{% endblock %}
