--- a/templates/video.html
+++ b/templates/video.html
@@ -1,48 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "layout.html" %}
 
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    {% if localOrRemote == 'local' %}
-    <title>Pet Feeder</title>
-    {% else %}
-    <title>Pet Feeder</title>
-    {% endif %}
-
+{% block head %}
+{{ super() }}
     <link rel="icon" href="../static/images/titleIcon.png">
-
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/googleFonts.css" rel="stylesheet" type="text/css">
-
     <link href="../static/css/tableStyle.css" rel="stylesheet">
     <link href="../static/css/feedButton.css" rel="stylesheet">
     <link href="../static/css/camButton.css" rel="stylesheet">
     <link href="../static/css/navBar.css" rel="stylesheet">
-</head>
+{% endblock %}
 
-<body>
-
-<div class="container">
-    <nav class="navbar navbar-default">
-        <div class="navbar-header">
-            <p class="navbar-brand1 navbar-brand navBarTitle">Pet Feeder</p>
-            <img class="img-responsive" src="../static/images/titleIcon.png" width="75" height="75" >
-        </div>
-    </nav>
-
+{% block main %}
     <div class="embed-responsive embed-responsive-4by3">
         <video class="embed-responsive-item" controls>
             <source src="../static/video/{{videoid}}">
         </video>
     </div>
+{% endblock %}
 
-</div>
-
-</body>
-</html>
