--- a/templates/home.html
+++ b/templates/home.html
@@ -62,7 +62,7 @@
                         <tbody>
                         {% for entry in upcomingXNumberFeedTimes %}
                         <tr>
-                            <td>{{entry[0]}}</td>
+                            <td>{{entry}}</td>
                             <td class="text-center">
                                 <input class="btn-sm btn-danger" type="button" value="Delete" onclick="deleteRow(this)"/>
                             </td>
@@ -76,11 +76,18 @@
                     <form role="form" name="scheduleDatetime" method="post" action="/scheduleDatetime">
                         <input type="date" name="scheduleDatetime">
                         <input type="time" name="scheduleTime">
-                        <input class="btn btn-primary" type="submit" value="Schedule">
+                        <input class="btn btn-primary" type="submit" value="Schedule One Time Feed">
                     </form>
-                    <br>
-                    <br>
                 </div>
+                <br>
+                <div>
+                    <form role="form" name="scheduleRepeatingDatetime" method="post" action="/scheduleRepeatingDatetime">
+                        <input type="text" name="scheduleRepeatingDate" value="Daily" size="17" readonly>
+                        <input type="time" name="scheduleRepeatingTime">
+                        <input class="btn btn-primary" type="submit" value="Schedule Repeating Daily Feed">
+                    </form>
+                </div>
+                <br>
             </div>
         {% else %}
 
@@ -118,7 +125,7 @@
                         <tbody>
                         {% for entry in upcomingXNumberFeedTimes %}
                         <tr>
-                            <td>{{entry[0]}}</td>
+                            <td>{{entry}}</td>
                             <td class="text-center">
                                 <input class="btn-sm btn-danger" type="button" value="Delete" onclick="deleteRow(this)"/>
                             </td>
@@ -132,9 +139,16 @@
                     <form role="form" name="scheduleDatetime" method="post" action="/scheduleDatetime">
                         <input type="date" name="scheduleDatetime">
                         <input type="time" name="scheduleTime">
-                        <input class="btn btn-primary" type="submit" value="Schedule">
+                        <input class="btn btn-primary" type="submit" value="Schedule One Time Feed">
                     </form>
                     <br>
+                    <div>
+                        <form role="form" name="scheduleRepeatingDatetime" method="post" action="/scheduleRepeatingDatetime">
+                            <input type="text" name="scheduleRepeatingDate" value="Daily" size="17" readonly>
+                            <input type="time" name="scheduleRepeatingTime">
+                            <input class="btn btn-primary" type="submit" value="Schedule Repeating Daily Feed">
+                        </form>
+                    </div>
                     <br>
                 </div>
             </div>
