--- a/templates/home.html
+++ b/templates/home.html
@@ -139,14 +139,14 @@
                     <form role="form" name="scheduleDatetime" method="post" action="/scheduleDatetime">
                         <input type="date" name="scheduleDatetime">
                         <input type="time" name="scheduleTime">
-                        <input class="btn btn-primary" type="submit" value="Schedule One Time Feed">
+                        <input style="margin-top: 5px" class="btn btn-primary" type="submit" value="Schedule One Time Feed">
                     </form>
                     <br>
                     <div>
                         <form role="form" name="scheduleRepeatingDatetime" method="post" action="/scheduleRepeatingDatetime">
                             <input type="text" name="scheduleRepeatingDate" value="Daily" size="17" readonly>
                             <input type="time" name="scheduleRepeatingTime">
-                            <input class="btn btn-primary" type="submit" value="Schedule Repeating Daily Feed">
+                            <input style="margin-top: 5px" class="btn btn-primary" type="submit" value="Schedule Repeating Daily Feed">
                         </form>
                     </div>
                     <br>
