--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,7 +32,7 @@
 
     <nav class="navbar navbar-default">
         <div class="navbar-header">
-            <p class="navbar-brand1 navbar-brand navBarTitle">Pet Feeder</p>
+            <p class="navbar-brand1 navbar-brand navBarTitle">&nbsp;&nbsp;Pet Feeder</p>
             <img class="img-responsive" src="/static/images/titleIcon.png" width="75" height="75" >
         </div>
     </nav>
